package task3;

import task3.Line.Position;

public interface Linable {

    public void setRank(int rank);

    public int getRank();

    public void setPosition(Position position);

    public Position getPosition();
    
}
